--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WFM Command Center</title>
+    <title>SIMULADOR DE CAPACITY</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -96,7 +96,7 @@
         
         <nav class="navbar navbar-light bg-white px-4 py-3 shadow-sm border-bottom sticky-top">
             <div>
-                <h5 class="fw-bold mb-0 text-dark">WFM Command Center</h5>
+                <h5 class="fw-bold mb-0 text-dark">SIMULADOR DE CAPACITY</h5>
                 <small class="text-muted">Simulação de Capacity & Dimensionamento</small>
             </div>
             <div class="d-flex gap-3 align-items-center">
